--- a/package.json
+++ b/package.json
@@ -23,19 +23,25 @@
     "zone.js": "^0.7.4"
   },
   "devDependencies": {
-    "@types/node": "^6.0.45",
     "@types/jasmine": "^2.5.35",
+    "@types/node": "^6.0.45",
     "angular2-template-loader": "^0.4.0",
+    "auto-prefixer": "^0.4.2",
     "awesome-typescript-loader": "^2.2.4",
     "css-loader": "^0.23.1",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
     "html-webpack-plugin": "^2.15.0",
+    "node-sass": "^4.3.0",
     "null-loader": "^0.1.1",
     "phantomjs-prebuilt": "^2.1.7",
+    "postcss-loader": "^1.2.2",
+    "precss": "^1.4.0",
     "raw-loader": "^0.5.1",
+    "resolve-url-loader": "^1.6.1",
     "rimraf": "^2.5.2",
+    "sass-loader": "^4.1.1",
     "style-loader": "^0.13.1",
     "typescript": "~2.0.10",
     "webpack": "^1.13.0",
