--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "auto-prefixer": "^0.4.2",
     "awesome-typescript-loader": "^2.2.4",
     "css-loader": "^0.23.1",
+    "exports-loader": "^0.6.3",
     "extract-text-webpack-plugin": "^1.0.1",
     "file-loader": "^0.8.5",
     "html-loader": "^0.4.3",
