--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   "devDependencies": {
     "@types/jasmine": "^2.5.35",
     "@types/node": "^6.0.45",
+    "angular-in-memory-web-api": "^0.2.4",
     "angular2-template-loader": "^0.4.0",
     "auto-prefixer": "^0.4.2",
     "awesome-typescript-loader": "^2.2.4",
